test/parse/expr/bad-unexpected.txt
;;; ERROR: 1
(module (func (module)))
(;; STDERR ;;;
out/test/parse/expr/bad-unexpected.txt:2:16: error: syntax error, unexpected MODULE
(module (func (module)))
               ^^^^^^
;;; STDERR ;;)
